# File: Cargo.toml
# Project: snap-coin-network
# Version: 0.1.0
# Description: Snap Coin network intelligence node with telemetry, geo mapping, and WebSocket dashboard
# Created: 2026-03-27

[package]
name = "snap-coin-network"
version = "0.1.0"
edition = "2024"
authors = ["OIEIEIO"]
description = "Snap Coin network intelligence node — peer telemetry, geo mapping, live dashboard"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8", features = ["ws"] }
bincode = "2.0.1"
clap = { version = "4.5.59", features = ["derive"] }
console-subscriber = "0.5.0"
crossterm = "0.29.0"
futures = "0.3.31"
log = "0.4.29"
maxminddb = "0.24"
ratatui = "0.29.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# snap-coin = { version = "=16.0.0", features = ["full", "full-node"] }
snap-coin = { path = "../snap-coin", features = ["full", "full-node"] }
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["fs"] }
tracing-subscriber = "0.3.22"

# Cargo.toml / snap-coin-network / v0.1.0 / 2026-03-27